--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/my favicom.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>Meu Portfólio</title>
+    <title>Atividades do Curso em vídeo</title>
 </head>
 
 <body>
