--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="cabecalho">
-            <h1> <img class="foto-perfil" src="imagens/foto-perfil-03.png" alt="Foto Anderson">
-                Anderson Costa</h1>
-        </div>
+    <header class="cabecalho">
+        <h1> Anderson Costa</h1>
     </header>
     <nav>
         <ul class="topnav">
