Desafios (parte 1) Tabelas

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="d009.html">Desafio 09</a>
                 <a href="d010.html">Desafio 10</a>
                 <a href="d011.html">Desafio 11</a>
+                <a href="d012.html">Desafio 12</a>
               </div>
             </li>
           </ul>
