--- a/d012.html
+++ b/d012.html
@@ -5,62 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/d012-style.css">
     <title>Capítulo 21 Aula 09 </title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-        }
 
-        .d01 {
-            border-collapse: collapse;
-            background-color: rgb(236, 243, 139);
-            width: 100%;
-        }
-
-        .mesclar-d01 {
-            background-color: rgb(247, 174, 91);
-        }
-
-        .d02 {
-            border-collapse: collapse;
-            background-color: rgb(247, 174, 91);
-            width: 100%;
-        }
-
-        .mesclar-d02 {
-            background-color: rgb(236, 243, 139);
-        }
-
-        td {
-            border: 1px solid rgb(0, 0, 0);
-            padding: 10px;
-            text-align: center;
-        }
-        .imagem-desafio{
-            float: right;
-            width: 49%; 
-            padding: 2px;
-            border: 2px solid rgb(255, 0, 0);
-            border-radius: 10px;
-        }
-        img{
-            width: 100%;
-        }
-        .resolucao{
-            width: 49%;
-        }
-
-    </style>
 </head>
 
 <body>
-    <h1>Capítulo 21 Aula 09 - Desafios (parte 1)</h1>
+    <header>
+
+    </header>
+    <nav>
+        <ul class="topnav">
+            <li><a class="active" href="index.html">Home</a></li>
+            <li class="right"><a href="#contato"></a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Tabelas - Desafio (parte 1)</h1>
         <section class="imagem-desafio">
             <h2>Desafios</h2>
-                <img src="imagens/desafio-tabela.PNG" alt="">
+            <img src="imagens/desafio-tabela.PNG" alt="">
         </section>
-
         <section class="resolucao">
             <table class="d01">
                 <caption>Desafio 01 </caption>
@@ -117,6 +83,7 @@
                 </tr>
             </table>
         </section>
+    </main>
 
 </body>
 
